src/objects/AccountKPI__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountsKPI</relationshipLabel>
        <relationshipName>AccountsKPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <label>KPI</label>
        <referenceTo>KPI__c</referenceTo>
        <relationshipLabel>AccountsKPI</relationshipLabel>
        <relationshipName>AccountsKPI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AccountKPI</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de AccountKPI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountsKPI</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>